--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Multilevel Model for Multivariate Responses with Missing Values
 Version: 1.0
 Date: 2017-10-11
-Authors@R: c(person("Irene SL","Zeng",email="i.zeng@auckland.ac.nz", role = c("aut", "cre")),person("Thomas","Lumley",email="t.lumley@auckland.ac.nz",role="ctb"))
-Description: To conduct Bayesian inference regression for responses with multilevel explanatory variables and missing values; It uses function from 'Stan', a software to implement posterior sampling using Hamiltonian MC and its variation Non-U-Turn algorithms. It implements the posterior sampling of regression coefficients from the multilevel regression models. The package has two main functions to handle not-missing-at-random missing responses and left-censored with not-missing-at random responses. The purpose is to provide a similar format as the other R regression functions but using 'Stan' models. 
+Authors@R: c(person("Irene SL","Zeng",email="i.zeng@auckland.ac.nz", role = c("aut", "cre")),person("Thomas","Lumley",email="t.lumley@auckland.ac.nz",role="ctb"),person("Trustees","Columbia-University",email="secretary@columbia.edu",role="cph"))
+Description: To conduct Bayesian inference regression for responses with multilevel explanatory variables and missing values(Zeng ISL (2017) <doi:10.1101/153049>). Functions utilizing 'Stan', a software to implement posterior sampling using Hamiltonian MC and its variation Non-U-Turn algorithms are generated and provided to implement the posterior sampling of regression coefficients from the multilevel regression models. The package has two main functions to handle not-missing-at-random missing responses and left-censored with not-missing-at random responses. The purpose is to provide a similar format as the other R regression functions but using 'Stan' models. 
 Maintainer: Irene SL Zeng <i.zeng@auckland.ac.nz>
 License: GPL-2
 Depends: R (>= 3.0.2), Rcpp (>= 0.12.12), methods, stats
